add dotenv depencies

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/boraozer/foxql-backend#readme",
   "dependencies": {
     "@foxql/foxql-server": "^1.0.4",
-    "cheerio": "^1.0.0-rc.5",
-    "node-fetch": "^2.6.1"
+    "dotenv": "^9.0.2"
   }
 }
