--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: foxql/backend:$(date +%s)
+          tags: foxql/backend:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
